--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,111 +2,111 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/Users/vasanti/miniconda2/lib/python2.7/site-packages\")\n",
+    "% matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "from array import array\n",
+    "import numpy as np\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "input_image = Image.open('70761397.jpg').convert('L').resize((256, 256))\n",
+    "matrix = np.array(input_image.getdata()).reshape(input_image.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Image\n",
-      "[[[221. 212. 205.]\n",
-      "  [221. 212. 205.]\n",
-      "  [221. 212. 205.]\n",
-      "  ...\n",
-      "  [218. 213. 210.]\n",
-      "  [218. 213. 210.]\n",
-      "  [218. 213. 210.]]\n",
-      "\n",
-      " [[218. 213. 210.]\n",
-      "  [215. 211. 202.]\n",
-      "  [215. 211. 202.]\n",
-      "  ...\n",
-      "  [195. 197. 186.]\n",
-      "  [195. 197. 186.]\n",
-      "  [196. 196. 186.]]\n",
-      "\n",
-      " [[195. 195. 185.]\n",
-      "  [193. 193. 183.]\n",
-      "  [196. 193. 184.]\n",
-      "  ...\n",
-      "  [181. 178. 159.]\n",
-      "  [181. 178. 159.]\n",
-      "  [181. 178. 159.]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[181. 196.  41.]\n",
-      "  [181. 196.  41.]\n",
-      "  [180. 195.  40.]\n",
-      "  ...\n",
-      "  [209. 200. 193.]\n",
-      "  [209. 200. 193.]\n",
-      "  [209. 200. 193.]]\n",
-      "\n",
-      " [[206. 202. 193.]\n",
-      "  [206. 202. 193.]\n",
-      "  [206. 202. 193.]\n",
-      "  ...\n",
-      "  [195. 190. 187.]\n",
-      "  [196. 191. 188.]\n",
-      "  [196. 191. 188.]]\n",
-      "\n",
-      " [[195. 190. 187.]\n",
-      "  [195. 190. 187.]\n",
-      "  [196. 191. 188.]\n",
-      "  ...\n",
-      "  [216. 202. 193.]\n",
-      "  [216. 202. 193.]\n",
-      "  [216. 202. 193.]]]\n",
-      "Transformed Image\n",
-      "[[213 213 213 ... 214 214 214]\n",
-      " [214 211 211 ... 195 195 194]\n",
-      " [193 191 192 ... 176 176 176]\n",
-      " ...\n",
-      " [173 173 172 ... 201 201 201]\n",
-      " [202 202 202 ... 191 192 192]\n",
-      " [191 191 192 ... 205 205 205]]\n"
+      "[ 0.64416688  0.1594002   0.03308713  0.02881032  0.01162369  0.00796056\n",
+      "  0.00677966  0.00649506  0.00599574  0.00559687  0.00452172  0.00429459\n",
+      "  0.00366401  0.00338368  0.00290882  0.00280915  0.00269901  0.00254749\n",
+      "  0.00239183  0.00235852]\n"
      ]
     }
    ],
    "source": [
-    "from PIL import Image\n",
-    "from array import array\n",
-    "import numpy as np\n",
-    "%matplotlib inline  \n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(matrix)\n",
+    "X_sca = scaler.transform(matrix)\n",
     "\n",
-    "image = Image.open(\"mkf97.jpg\")\n",
-    "print(\"Original Image\")\n",
     "\n",
-    "a = np.array(image.getdata()).astype(np.float32).reshape( (image.size[0],image.size[1],3) )\n",
-    "print(a)\n",
+    "pca = PCA(n_components=20)\n",
+    "X_pca = pca.fit_transform(X_sca)\n",
+    "print pca.explained_variance_ratio_\n",
     "\n",
-    "im = image.convert('L')\n",
-    "\n",
-    "matrix = np.array(im.getdata()).reshape(im.size)\n",
-    "print(\"Transformed Image\")\n",
-    "print(matrix)"
+    "#choosing the top 20 components for X and make it 256x20"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
