--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,22 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"/Users/vasanti/miniconda2/lib/python2.7/site-packages\")\n",
-    "% matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
@@ -30,31 +15,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "input_image = Image.open('70761397.jpg').convert('L').resize((256, 256))\n",
+    "input_image = Image.open('../training-images/0000523e34f86fc3.jpg').convert('L').resize((256, 256))\n",
     "matrix = np.array(input_image.getdata()).reshape(input_image.size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.64416688  0.1594002   0.03308713  0.02881032  0.01162369  0.00796056\n",
-      "  0.00677966  0.00649506  0.00599574  0.00559687  0.00452172  0.00429459\n",
-      "  0.00366401  0.00338368  0.00290882  0.00280915  0.00269901  0.00254749\n",
-      "  0.00239183  0.00235852]\n"
+      "[  8.27363842e-01   7.12258069e-02   3.74789436e-02   1.47741723e-02\n",
+      "   9.32324651e-03   4.72333480e-03   3.85486798e-03   3.13275230e-03\n",
+      "   2.22586195e-03   1.87476534e-03   1.81885988e-03   1.41972396e-03\n",
+      "   1.23497539e-03   1.03749334e-03   9.39068882e-04   8.63225340e-04\n",
+      "   8.01428766e-04   7.74235341e-04   6.72894154e-04   6.44401372e-04]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rimra\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:444: DataConversionWarning: Data with input dtype int32 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
      ]
     }
    ],
@@ -66,7 +56,7 @@
     "\n",
     "pca = PCA(n_components=20)\n",
     "X_pca = pca.fit_transform(X_sca)\n",
-    "print pca.explained_variance_ratio_\n",
+    "print(pca.explained_variance_ratio_)\n",
     "\n",
     "#choosing the top 20 components for X and make it 256x20"
    ]
@@ -74,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -92,21 +80,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
