Started with 150 class

--- a/pca.ipynb
+++ b/pca.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -91,15 +91,24 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1225029, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "label_train_data = pd.read_csv(os.getcwd() + '\\\\..\\\\data\\\\train.csv', index_col='id')\n",
-    "label_test_data = pd.read_csv(os.getcwd() + '\\\\..\\\\data\\\\test.csv', index_col='id')"
+    "label_test_data = pd.read_csv(os.getcwd() + '\\\\..\\\\data\\\\test.csv', index_col='id')\n",
+    "print(label_train_data[])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
