Created svm input

--- a/top150classes.ipynb
+++ b/top150classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,7 @@
      "output_type": "stream",
      "text": [
       "Preprocessing Images\n",
-      "(5642, 65536)\n",
-      "(4513, 65536)\n",
-      "(1129, 65536)\n"
+      "[9633, 6051, 6599, 9779, 2061, 5554, 6651, 6696, 5376, 2743, 4352, 13526, 1553, 10900, 8063, 8429, 4987, 12220, 11784, 2949, 12718, 3804, 10184, 7092, 10045, 2338, 12172, 3924, 428, 9029, 10932, 1878, 10026, 3497, 2044, 3283, 5367, 9434, 7661, 7172, 2870, 11249, 13653, 13170, 6231, 8169, 10033, 5955, 2449, 1847, 11371, 233, 165, 1946, 10511, 1602, 2241, 13475, 13444, 1472, 8274, 13873, 2444, 12972, 3130, 7000, 13594, 4300, 4085, 5460, 13876, 5046, 12676, 10577, 4981, 13332, 878, 2341, 1213, 7041, 7008, 6476, 960, 152, 9999, 1546, 7764, 4644, 9605, 7420, 4954, 6597, 5475, 3426, 3065, 1310, 5166, 5421, 6347, 12966, 11536, 12647, 9296, 2145, 10005, 10644, 12965, 7840, 6846, 3034, 10496, 13471, 5618, 5206, 7130, 2246, 11073, 12937, 14703, 4949, 12752, 6973, 253, 10313, 9738, 10067, 2665, 10688, 12075, 9135, 7416, 10600, 1834, 14111, 11037, 4793, 13176, 6125, 8161, 4330, 3518, 2330, 2802, 7218, 5880, 10028, 2126, 8143, 762, 10522]\n"
      ]
     }
    ],
@@ -23,6 +21,8 @@
     "import os, os.path\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "numSamples = {}\n",
+    "topClasses = []\n",
     "inputs = []\n",
     "train_Y = []\n",
     "\n",
@@ -33,10 +33,19 @@
     "data = data[1:]\n",
     "i = 0\n",
     "\n",
+    "for entry in data:\n",
+    "    classVal = int(entry[2])\n",
+    "    numSamples[classVal] = numSamples.get(classVal, 0) + 1\n",
+    "\n",
+    "temp = sorted(numSamples, key=numSamples.get, reverse=True)\n",
+    "topClasses = temp[:150]\n",
+    "print(topClasses)\n",
+    "\n",
     "path = '../training-images'\n",
+    "#print(os.listdir(path))\n",
     "for filename in os.listdir(path):\n",
     "    entry = int(data[i][2])\n",
-    "    if entry > 150 or entry < 0:\n",
+    "    if entry not in topClasses:\n",
     "        i = i + 1\n",
     "        continue\n",
     "\n",
@@ -59,10 +68,30 @@
     "#train_X = train_X.reshape(-1, 256, 256, 1)\n",
     "\n",
     "train_X,valid_X,train_label,valid_label = train_test_split(train_X, train_Y, test_size=0.2, random_state=13)\n",
-    "\n",
     "print(train_X.shape)\n",
-    "print(valid_X.shape)\n",
-    "\n",
+    "print(valid_X.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Working!\")\n",
+    "print(train_X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from sklearn.decomposition import PCA\n",
     "pca = PCA(n_components=20)\n",
     "pca = pca.fit(train_X)\n",
@@ -72,48 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1bbaa4080>]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
-    "plt.plot(np.cumsum(pca.explained_variance_ratio_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\n",
     "from sklearn.datasets import dump_svmlight_file\n",
-    "dump_svmlight_file(X_pca_train,train_label,'train.input', multilabel=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dump_svmlight_file(X_pca_valid,valid_label,'valid.input', multilabel=False)"
+    "dump_svmlight_file(X_pca_train,train_label,'train150.input', multilabel=False)\n",
+    "dump_svmlight_file(X_pca_valid,valid_label,'valid150.input', multilabel=False)"
    ]
   },
   {
