FAST XML Scripts

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,111 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"/Users/vasanti/miniconda2/lib/python2.7/site-packages\")\n",
-    "% matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "from array import array\n",
-    "import numpy as np\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "input_image = Image.open('70761397.jpg').convert('L').resize((256, 256))\n",
-    "matrix = np.array(input_image.getdata()).reshape(input_image.size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.64416688  0.1594002   0.03308713  0.02881032  0.01162369  0.00796056\n",
-      "  0.00677966  0.00649506  0.00599574  0.00559687  0.00452172  0.00429459\n",
-      "  0.00366401  0.00338368  0.00290882  0.00280915  0.00269901  0.00254749\n",
-      "  0.00239183  0.00235852]\n"
+      "[9633, 6051, 6599, 9779, 2061, 5554, 6651, 6696, 5376, 2743]\n",
+      "Loading Images\n",
+      "(179828, 2048)\n",
+      "(143862, 2048)\n",
+      "(35966, 2048)\n",
+      "Done!\n"
      ]
     }
    ],
    "source": [
-    "scaler = StandardScaler()\n",
-    "scaler.fit(matrix)\n",
-    "X_sca = scaler.transform(matrix)\n",
+    "import csv\n",
+    "import operator\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import os, os.path\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from collections import Counter\n",
     "\n",
+    "preprocessedPath = 'D:/preprocessed'\n",
+    "arr = []\n",
+    "inputs = []\n",
+    "train_Y = []\n",
+    "csvfile = open('D:/train.csv', 'r')\n",
+    "csvreader = csv.reader(csvfile)\n",
+    "data = [line[:3] for line in csvreader]\n",
+    "wale=[]\n",
+    "for entry in data:\n",
+    "    wale.append(entry[2])\n",
+    "rows=Counter(wale).most_common(10)\n",
+    "topper = [x for x,_ in rows]\n",
+    "usman=[]\n",
+    "for i in range(10):\n",
+    "    usman.append(int(topper[i]))\n",
+    "print(usman)\n",
     "\n",
-    "pca = PCA(n_components=20)\n",
-    "X_pca = pca.fit_transform(X_sca)\n",
-    "print pca.explained_variance_ratio_\n",
+    "print('Loading Images')\n",
+    "data = data[1:]\n",
+    "data = sorted(data, key=operator.itemgetter(0))\n",
+    "i = 0\n",
+    "kk = 0\n",
     "\n",
-    "#choosing the top 20 components for X and make it 256x20"
+    "for filename in os.listdir(preprocessedPath):\n",
+    "    arr.extend(np.load(os.path.join(preprocessedPath, filename)))\n",
+    "path = 'D:/training'\n",
+    "for entry in data:\n",
+    "    if ((int(entry[2]) not in usman) or (int(entry[2]) < 0)):\n",
+    "        i = i + 1\n",
+    "        kk = kk + 1\n",
+    "        continue\n",
+    "    try:\n",
+    "        filename = entry[0] + '.jpg'\n",
+    "        im = Image.open(os.path.join(path, filename))\n",
+    "        inputs.append(arr[kk])\n",
+    "        train_Y.append(int(entry[2]))\n",
+    "        i = i + 1\n",
+    "        kk = kk + 1\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        #print('Can not identify file %s' %(filename))\n",
+    "        i = i + 1\n",
+    "\n",
+    "train_X = np.array(inputs)\n",
+    "print(train_X.shape)\n",
+    "\n",
+    "train_X, valid_X, train_label, valid_label = train_test_split(train_X, train_Y, test_size=0.2, random_state=13)\n",
+    "print(train_X.shape)\n",
+    "print(valid_X.shape)\n",
+    "\n",
+    "from sklearn.datasets import dump_svmlight_file\n",
+    "dump_svmlight_file(train_X,train_label,'train', zero_based=True, multilabel=False)\n",
+    "dump_svmlight_file(valid_X,valid_label,'valid', zero_based=True, multilabel=False)\n",
+    "print(\"Done!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
